apps/staging/coder-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coder-ingress
  namespace: coder
  annotations:
    kubernetes.io/ingress.class: traefik
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
      - coder.devops.notmet.net
      secretName: coder-tls
  rules:
  - host: coder.devops.notmet.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coder
            port:
              number: 80
